# presentations

./: .gitignore  README.md  index.html  presentations.sublime-project
april-2015-erlang-ecosystem@dwo-2015/: Gruntfile.js  index.html  package.json
august-2014-error-handling-in-nodejs@meetjsktw/: index.html  package.json
done/clojurescript-om@meetjsktw/: presentation.html  slides.md
done/elixir-plus-phoenix@kariera-it-ktw/: README.md  (+1 more)
done/property-based-testing@functional-miners/qsort/: qsort.cabal
done/property-based-testing@functional-miners/qsort/src/: qsort.hs
february-2015-clojurescript-om@meetjsktw/: presentation.html  slides.md
february-2015-nodeschool-what-who-why@nodeschool-silesia/: slides.md
in-progress/: TOFIX
january-2013-python-tdd@polsl/: index.html  test-runner.py  test-sample.py
js@fp/: js@FP.html
june-2015-zeromq-in-nodejs@berlinjs/: presentation.html  slides.md
march-2015-javascripting@nodeschool-silesia/: presentation.html
march-2015-learnyounode@nodeschool-silesia/: slides.md
nodejs-hype-or-hope@fdd2013/: .gitignore
november-2015-microservices-evolution@spreadit-glw/: flow.md
october-2013-web-performance-crash-course@fp/: index.html  to-gif.sh
october-2016-erlang-ecosystem@infoMEET-2016-ktw/: presentation.html
scripts/: gdpr.js
september-2013-nodejs-hype-or-hope@fdd2013/: Gruntfile.js
september-2015-elixir-plus-phoenix@kariera-it-ktw/: .gitignore
september-2016-property-based-testing@functional-miners/: presentation.md
stylesheets/: gdpr.css  main.css
ts-accounting-authorization@polsl/: index.html
(+183 files in other folders)
